Refactor: Make logging more concise in user-service